# RainforestAndroidMiner

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/tdcoincore/tdcoinminer/: MainActivityTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/tdcoincore/tdcoinminer/: MainActivity.java  SpinnerCtr.java  Utils.java
app/src/main/res/drawable/: ic_all_white_tdcoin_symbol.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/org/tdcoincore/tdcoinminer/: UtilsUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
tdcoinmininglibrary/: CMakeLists.txt  build.gradle
tdcoinmininglibrary/src/main/cpp/libcpuminer/: libcpuminer.c  rfv2_core.c
